WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233928
Assertion after removing stylesheet with loading @import rule
https://bugs.webkit.org/show_bug.cgi?id=233928
Summary
Assertion after removing stylesheet with loading @import rule
Antti Koivisto
Reported
2021-12-07 06:57:45 PST
hitting Scope::~Scope() { ASSERT(!hasPendingSheets()); }
Attachments
Patch
(3.39 KB, patch)
2021-12-07 07:08 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-12-07 07:08:19 PST
Created
attachment 446170
[details]
Patch
EWS
Comment 2
2021-12-07 10:20:29 PST
Committed
r286599
(?): <
https://commits.webkit.org/r286599
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446170
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-07 10:21:23 PST
<
rdar://problem/86163881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug