Assertion after removing stylesheet with loading @import rule https://bugs.webkit.org/show_bug.cgi?id=233928

Reviewed by Alan Bujtas.

Source/WebCore:

Tests: fast/css/import-and-remove-assert.html

* dom/InlineStyleSheetOwner.cpp:
(WebCore::InlineStyleSheetOwner::removedFromDocument):

Ensure we notify Style::Scope

LayoutTests:

* fast/css/import-and-remove-assert-expected.txt: Added.
* fast/css/import-and-remove-assert.html: Added.



Canonical link: https://commits.webkit.org/244924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286599 268f45cc-cd09-0410-ab3c-d52691b4dbfc